<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".EditorFragment">-->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_guitarist"
        android:inputType="textCapSentences|textMultiLine"

        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guitaristImage"
        tools:ignore="Autofill"
        tools:text="name" />

    <EditText
        android:id="@+id/edit_dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="76dp"
        android:hint="@string/enter_date_of_birth_d_m_y"
        android:inputType="textCapSentences|textMultiLine"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_name"
        tools:ignore="Autofill"
        tools:text="date of birth (D-M-Y)" />

    <EditText
        android:id="@+id/edit_band"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="64dp"
        android:hint="@string/enter_band"
        android:inputType="textCapSentences|textMultiLine"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_dob"
        tools:ignore="Autofill"
        tools:text="band" />

    <EditText
        android:id="@+id/edit_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="212dp"
        android:hint="@string/enter_genre"
        android:inputType="textCapSentences|textMultiLine"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_band"
        tools:ignore="Autofill"
        tools:text="genre" />

    <EditText
        android:id="@+id/edit_guitarType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:hint="@string/enter_guitar_type"
        android:inputType="textCapSentences|textMultiLine"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_genre"
        tools:ignore="Autofill"
        tools:text="guitar type" />

    <EditText
        android:id="@+id/edit_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:hint="@string/enter_status"
        android:inputType="textCapSentences|textMultiLine"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_guitarType"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="Autofill"
        tools:text="status" />


    <ImageView
        android:id="@+id/guitaristImage"
        android:layout_width="190dp"
        android:layout_height="192dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/guitarist01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <!--    <Button-->
<!--        android:id="@+id/button1"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Button"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/guitaristImage"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/button3"-->
<!--        app:layout_constraintHorizontal_bias="0.32"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <Button-->
<!--        android:id="@+id/button2"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Button"-->
<!--        app:layout_constraintTop_toTopOf="@+id/button1"-->
<!--        tools:layout_editor_absoluteX="150dp"-->
<!--        tools:ignore="MissingConstraints" />-->

<!--    <Button-->
<!--        android:id="@+id/button3"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Button"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.344"-->
<!--        app:layout_constraintStart_toEndOf="@+id/button1"-->
<!--        app:layout_constraintTop_toTopOf="@+id/button1" />-->


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

<!--</androidx.core.widget.NestedScrollView>-->